--- a/.gitmodules
+++ b/.gitmodules
@@ -1,5 +1,10 @@
 [submodule ".registry"]
 	path = .registry
-	url = https://github.com/r-universe-org/cran-to-git
+	url = https://github.com/e-kotov/universe
 	shallow = true
 	branch = HEAD
+[submodule "wikimapR"]
+	path = wikimapR
+	url = https://github.com/e-kotov/wikimapR
+	shallow = true
+	registered = true
