--- a/.gitmodules
+++ b/.gitmodules
@@ -2,6 +2,9 @@
 	path = .registry
 	url = https://github.com/e-kotov/e-kotov.r-universe.dev
 	branch = HEAD
+[submodule "alboFr"]
+	path = alboFr
+	url = https://github.com//e-kotov/alboFr
 [submodule "mapineqr"]
 	path = mapineqr
 	url = https://github.com/e-kotov/mapineqr
