--- a/.gitmodules
+++ b/.gitmodules
@@ -7,7 +7,7 @@
 	url = https://github.com/e-kotov/alboFr
 [submodule "mall"]
 	path = mall
-	url = https://github.com/e-kotov/mall
+	url = https://github.com/e-kotov/mall/r
 	branch = structured
 [submodule "mapineqr"]
 	path = mapineqr
