--- a/.gitmodules
+++ b/.gitmodules
@@ -17,6 +17,9 @@
 [submodule "rdocdump"]
 	path = rdocdump
 	url = https://github.com/e-kotov/rdocdump
+[submodule "tphconv"]
+	path = tphconv
+	url = https://github.com/e-kotov/tphconv
 [submodule "wikimapR"]
 	path = wikimapR
 	url = https://github.com/e-kotov/wikimapR
