--- a/.gitmodules
+++ b/.gitmodules
@@ -14,6 +14,9 @@
 [submodule "mapineqr"]
 	path = mapineqr
 	url = https://github.com/e-kotov/mapineqr
+[submodule "r5rgui"]
+	path = r5rgui
+	url = https://github.com/e-kotov/r5rgui
 [submodule "rJavaEnv"]
 	path = rJavaEnv
 	url = https://github.com/e-kotov/rJavaEnv
